<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examen2eval.ActividadDatosAtomicos">

    <TextView
        android:id="@+id/lblIntroDatoAtomico"
        android:text="@string/IntroducirDatoAtomico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        />
    <EditText
        android:id="@+id/editTextDatoAtomico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblIntroDatoAtomico"
        />
    <Button
        android:id="@+id/butInfoElemento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDatoAtomico"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/InfoElemento"
        />
    <TextView
        android:id="@+id/lblSimboloQuimico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SimboloQuimico"
        android:layout_below="@+id/butInfoElemento"
        style="@style/MiEstilo"
        />
    <TextView
        android:id="@+id/lblNumeroAtomico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumeroAtomico"
        android:layout_below="@+id/lblSimboloQuimico"
        style="@style/MiEstilo"
        />
    <TextView
        android:id="@+id/lblPesoAtomico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PesoAtomico"
        android:layout_below="@+id/lblNumeroAtomico"
        style="@style/MiEstilo"
        />
    <TextView
        android:id="@+id/PuntoEbullicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PuntoEbullicion"
        android:layout_below="@+id/lblPesoAtomico"
        style="@style/MiEstilo"
        />
    <TextView
        android:id="@+id/Densidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Densidad"
        android:layout_below="@+id/PuntoEbullicion"
        style="@style/MiEstilo"
        />
    <Button
        android:id="@+id/butVolver"
        android:width="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/butmultimedia"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/volver"
        android:onClick="volver"
        />
</RelativeLayout>
