<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.examen2eval.MainActivity">

    <TextView
        android:id="@+id/lblmenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuPrincpipal"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30dp"
        />
    <Button
        android:id="@+id/butTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lblmenuPrincipal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:width="200dp"
        android:text="@string/eltiempo"
        />
    <Button
        android:id="@+id/butDatosAtomicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/butTiempo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/datosAtomicos"
        />
    <Button
        android:id="@+id/butmultimedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:layout_below="@+id/butDatosAtomicos"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/multimedia"
        />
    <Button
        android:id="@+id/butExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/exit"
        android:width="200dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:onClick="exit"
        />

</RelativeLayout>
